<resources>
    <string name="app_name">Solarstats</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="sideMenu">
        <item>Data</item>
        <item>Diagram</item>
        <item>Solar systems</item>
        <item>Exported</item>
        <item>Help</item>
        <item>About</item>
    </string-array>
    <string-array name="data_date_spinner">
        <item>Choose date</item>
        <item>Yesterday</item>
        <item>Today</item>
    </string-array>
    <string-array name="data_export_types">
        <item>Excel-Sheet</item>
        <item>PDF (without diagram)</item>
        <item>PDF (with diagram)</item>
    </string-array>
    <string-array name="data_import_types">
        <item>Excel-Table (.xls)</item>
        <item>Bluetooth (SMA inverter)</item>
    </string-array>
    <string-array name="diagramm_export_types">
        <item>Image (15cm x 10cm)</item>
        <item>Image (1920px x 1080px)</item>
        <item>Image (costum size)</item>
    </string-array>
    <string-array name="diagramm_categorySpinner">
        <item>Entire data</item>
        <item>Month</item>
        <item>One year</item>
        <item>More years</item>
        <item>Year-Comparison</item>
        <item>Choose period</item>
    </string-array>
    <string-array name="helpTabs">
        <item>Data</item>
        <item>Diagram</item>
        <item>Solar systems</item>
        <item>Exported</item>
    </string-array>
    <string-array name="valueSizes">
        <item>Wh</item>
        <item>kWh</item>
        <item>MWh</item>
        <item>GWh</item>
    </string-array>
    <string-array name="reminderIntervals">
        <item>Each day</item>
        <item>Every second day</item>
        <item>Every fourth day</item>
        <item>Weekly</item>
    </string-array>
    <string-array name="daysOfWeek">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="systemColors">
        <item>Orange</item>
        <item>Red</item>
        <item>Green</item>
        <item>Violet</item>
        <item>Blue</item>
    </string-array>
    <string name="update_system_name">Mainsystem</string>
    <string name="reminder_title">Insert meter reading</string>
    <string name="reminder_text">Please type in today\'s meter reading</string>
    <string name="reminder_edit">Insert</string>
    <string name="reminder_later">In 1 hour</string>
    <string name="start_loading">Loading data…</string>
    <string name="start_version">Version: %1$s</string>
    <string name="toast_finish_app">To leave press back again</string>
    <string name="load_data_dialog_text">Loading data…</string>
    <string name="first_title">Solarstats Introduction</string>
    <string name="first_back">Back</string>
    <string name="first_forward">Next</string>
    <string name="first_finish">Start</string>
    <string name="first_1">Welcome to Solarstats.\nThis introduction will show you, which oppurtunities this app offers.\n\n<b>1. Menu</b>\nYou can open the menu with a click in the top left corner or with a slide from left:</string>
    <string name="first_2"><b>2. Data</b>\nYou can see the stored meter readings as a table. Below, enter the value for any date. With a long click on an entry you can delete it.</string>
    <string name="first_3_top"><b>3. Im- and Export</b>\nMeter readings can be imported from an excel file (.xls). Please make sure that the file is formatted like this:</string>
    <string name="first_3_bottom">Next to each date in the left column is a value in the immediate neighboring right column. Here, each date should only occur once.\n\nBoth, meter readings and graphs, can be exported via the menu in the upper right corner. Files that are created, you can view below <i>Exported</i>.</string>
    <string name="first_4_top"><b>4. Diagram</b>\nYour stored data can be represented as a diagram. You have many types available. In some types you can display several solar systems in one diagram. In the menu in the upper right corner you can then select the solar systems to display.</string>
    <string name="first_4_bottom">Charts can be displayed only when a sufficient number of meter readings is stored. Sensibly they are only when data is entered regularly.</string>
    <string name="first_5_top"><b>5. Manage solar systems</b>\nSolarstats offers you the possibility to manage several solar systems. In the menu on the left hand side you can select the solar system you want to see or edit. Charts and counters always refer to this system.\nUnder <i>Solar systems</i>, you can manage the systems. If you have stored at least two systems, a total overview will be shown:</string>
    <string name="first_5_bottom">Assign the different solar systems colors to distinguish them in diagram. If you specify peak power and earnings per kWh, Solarstats calculates efficiency and profit per system.</string>
    <string name="first_6_top"><b>6. Reminder</b>\nTo help you remember it regularly enter the meter reading, you can be reminded in a specific rhythm. In the <i>Settings</i> you can activate and edit this feature.</string>
    <string name="solarsystems_fragment_dialog_new_name">Name:</string>
    <string name="solarsystems_fragment_dialog_new_hint_must">required</string>
    <string name="solarsystems_fragment_dialog_new_hint_may">optional</string>
    <string name="solarsystems_fragment_dialog_new_defaultname">Mainsystem</string>
    <string name="solarsystems_fragment_dialog_new_date">Installationdate:</string>
    <string name="solarsystems_fragment_dialog_new_date_button">choose</string>
    <string name="solarsystems_fragment_dialog_new_peak">Peak power:</string>
    <string name="solarsystems_fragment_dialog_new_payment">Earnings per %1$s:</string>
    <string name="solarsystems_fragment_dialog_new_color">Color:</string>
    <string name="solarsystems_fragment_dialog_new_cent">&#x00A2;</string>
    <string name="solarsystems_fragment_dialog_new_positive">Save</string>
    <string name="solarsystems_fragment_dialog_new_negative">Cancel</string>
    <string name="solarsystems_fragment_no_data"><i>No data</i></string>
    <string name="solarsystems_fragment_saved_meter_reading">Saved meter readings:</string>
    <string name="solarsystems_fragment_total_value">Meter reading:</string>
    <string name="solarsystems_fragment_efficiency">Efficiency:</string>
    <string name="solarsystems_fragment_earnings">Total earnings:</string>
    <string name="solarsystems_fragment_name_total">Total</string>
    <string name="help_data_1"><b>The table</b>\nYour meter readings are shown in a table. In the left column is the date, in the middle the meter reading and in the right column the value how much your solar system has produced on that day. If there is the character \"~\" then it\'s an average.\nTo edit an entry, select him and type a new value in. If you want to delete an entry, then you click on him longer.</string>
    <string name="help_data_2"><b>Insert data</b>\nUse the input field at the bottom of the screen to enter the meter readings of your solar system. To the left of the input field, you can select a date. It is always checked automatically whether the input value can be correct (ie, it is at least as large as the count from the day before and at most as large as the count from the next day). The unit (kWh, MWh, etc.) your data will be stored, you can specify in the settings.</string>
    <string name="help_data_3"><b>Import data (excel)</b>\nIn the menu you can import meter readings from an excel file. Only .xls files will be accepted. You select the file from your device. Then Solarstats searches for data. The data in the excel file must be in this format, so that they can be found:</string>
    <string name="help_data_4">Next to each date in the left column is a value in the immediate neighboring right column. Here, each date should only occur once.</string>
    <string name="help_diagramm_1"><b>Entire data</b>\nThis graph represents all the data that are stored. You can see by touching the graph the exact values for each day. With the menu in the top right corner you can display more solar plants if available.</string>
    <string name="help_diagramm_2"><b>Month</b>\nIn this diagram, you can select the month to be displayed at the bottom right. There are only months in which at least two counts were saved because otherwise no chart can be generated. Here you can see also the exact values by a touch of the graph and you can also select more solar plants.</string>
    <string name="help_diagramm_3"><b>One Year</b>\nThis column chart can give the overview of individual years. There are also at least two meter readings for a year needed so that you can select it. The diagram is useful only if you enter values regularly.</string>
    <string name="help_diagramm_4"><b>More Years</b>\nThis diagram gives you an overview over several years. You must specify the start and end year. It is only useful with a lot of data.</string>
    <string name="help_diagramm_5"><b>Year Comparison</b>\nThis column chart can compare two years. This is only possible if you have saved at least two meter readings for two or more years. However, this diagram form is only useful if many meter readings are available.</string>
    <string name="help_diagramm_6"><b>Choose period</b>\nFor this chart, you must specify a time period. Again, you get through a touch of the graph the exact values of the days. Here you can also display more solar plants in one chart by selecting the systems in the top right menu.</string>
    <string name="about_fragment_imprint"><b>Imprint</b>\nMarkus Wiktorin\nHeussstr. 23\n53332 Bornheim\nGermany\nE-Mail: <a href="mailto:markuswiktorin@gmail.com">markuswiktorin@gmail.com</a></string>
	<string name="about_fragment_info"><b>Information</b>\nFor errors or suggestions for improvement please contact me at the e-mail address given below.\nMany thanks to the <a href="http://jexcelapi.sourceforge.net/">Java Excel API</a> open source project. The import and export of the counts work with this project.\nTo create PDF documents the <a href="http://coderesearchlabs.com/androidpdfwriter/">Android PDF Writer Library</a> is used.</string>
	<string name="about_fragment_apwcopyright"><a href="">Copyright-Information about Android PDF Writer Library</a></string>
	<string name="about_fragment_disclaimer1"><b>Liability for content</b>\nAs a service provider we are responsible for our own content in this app under the general laws according to § 7 ​​paragraph 1 of TMG. According to §§ 8 to 10 TMG we are not obliged as a service provider to monitor transmitted or stored foreign information or to investigate circumstances that indicate illegal activity. Obligations to remove or block the use of information under the general laws remain unaffected. However, a relevant liability is only possible from the date of knowledge of a specific infringement. Upon notification of such violations, we will remove the content immediately.</string>
	<string name="about_fragment_disclaimer2"><b>Liability for links</b>\nOur app contains links to external websites over which we have no control. Therefore we can not accept any responsibility for their content. The respective provider or operator of the pages is always responsible for the contents of the site. The linked sites were checked at the time of linking for possible violations of law. A permanent control of the linked pages is unreasonable without concrete evidence of a violation. Upon notification of violations, we will remove such links immediately.</string>
	<string name="about_fragment_buttonRate">Rate</string>
	<string name="about_fragment_buttonShare">Share</string>
</resources>