<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/about_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="10dp"
            android:text="@string/about_fragment_info"
            android:textColorLink="@color/dark_orange"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/about_apwcopyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#fff"
            android:padding="10dp"
            android:text="@string/about_fragment_apwcopyright"
            android:textColorLink="@color/dark_orange"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:padding="10dp" >

            <Button
                android:id="@+id/about_rate_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/about_fragment_buttonRate" />

            <Button
                android:id="@+id/about_share_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/about_fragment_buttonShare" />
        </LinearLayout>

        <TextView
            android:id="@+id/about_imprint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autoLink="email|web"
            android:background="#fff"
            android:padding="10dp"
            android:text="@string/about_fragment_imprint"
            android:textColorLink="@color/dark_orange"
            android:textSize="18sp" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/about_fragment_disclaimer1"
            android:textSize="18sp" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="10dp"
            android:text="@string/about_fragment_disclaimer2"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>