<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#fff"
            android:padding="10dp"
            android:text="@string/help_data_1"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#fff"
            android:padding="10dp"
            android:text="@string/help_data_2"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="10dp"
            android:text="@string/help_data_3"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:contentDescription="@null"
            android:src="@drawable/first_import" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="10dp"
            android:text="@string/help_data_4"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>