<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/alertTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:drawablePadding="10dip"
            android:singleLine="true"
            android:textColor="@color/dark_orange"
            android:textSize="23sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="@color/dark_orange" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="16dip"
            android:orientation="horizontal" >

            <TextView
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/solarsystems_fragment_dialog_new_name" />

            <EditText
                android:id="@+id/new_solarsystem_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLength="50"
                android:hint="@string/solarsystems_fragment_dialog_new_hint_must"
                android:inputType="text"
                android:singleLine="true"
                android:text="@string/solarsystems_fragment_dialog_new_defaultname" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="16dip"
            android:orientation="horizontal" >

            <TextView
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/solarsystems_fragment_dialog_new_date" />

            <Button
                android:id="@+id/new_solarsystem_date_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0dp"
                android:singleLine="true"
                android:text="@string/solarsystems_fragment_dialog_new_date_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="16dip"
            android:orientation="horizontal" >

            <TextView
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/solarsystems_fragment_dialog_new_peak" />

            <EditText
                android:id="@+id/new_solarsystem_peak"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:hint="@string/solarsystems_fragment_dialog_new_hint_may"
                android:inputType="number"
                android:singleLine="true" />

            <TextView
                android:id="@+id/solarsystem_fragment_dialog_peak_unit"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="16dip"
            android:orientation="horizontal" >

            <TextView
                style="?android:attr/textAppearanceMedium"
                android:id="@+id/new_solarsystem_payment_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/solarsystems_fragment_dialog_new_payment" />

            <EditText
                android:id="@+id/new_solarsystem_payment_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:hint="@string/solarsystems_fragment_dialog_new_hint_may"
                android:inputType="numberDecimal"
                android:digits="0123456789,."
                android:singleLine="true" />

            <TextView
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/solarsystems_fragment_dialog_new_cent" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="16dip"
            android:orientation="horizontal" >

            <TextView
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/solarsystems_fragment_dialog_new_color" />
            
            <View
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="1" />

			<Spinner 
			    android:id="@+id/new_solarsystem_color"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:entries="@array/systemColors"
			    />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:measureWithLargestChild="true"
        android:orientation="horizontal"
        android:paddingEnd="2dip"
        android:paddingStart="2dip"
        android:paddingTop="4dip" >

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:maxLines="2"
            android:text="@string/solarsystems_fragment_dialog_new_negative" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
			android:enabled="false"            
            android:maxLines="2"
            android:text="@string/solarsystems_fragment_dialog_new_positive" />
    </LinearLayout>

</LinearLayout>