<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_launcher"
            android:drawablePadding="10dp"
            android:text="@string/first_title"
            android:textColor="@color/dark_orange"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/first_2"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:contentDescription="@null"
            android:src="@drawable/first_data" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/first_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_back"
                android:textColor="@color/dark_orange"
                android:textSize="25sp"
                android:textStyle="bold|italic" />

            <View
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/first_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/first_forward"
                android:textColor="@color/dark_orange"
                android:textSize="25sp"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>